Restructure project: React ts frontend/ and add Django backend/

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -9,6 +9,10 @@
     font-style: normal;
   }
 
+  .font-ethnocentric {
+    font-family: 'Ethnocentric', sans-serif;
+  }
+
 * {
     margin: 0;
     padding: 0;
